# deepcoffee

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  mkdocs.yml  serve.sh
deepcoffee-api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
deepcoffee-api/app/: __init__.py  main.py
deepcoffee-api/migrations/: 002_orm_schema.sql  006_user_equipment_profiles_is_default.sql  007_internal_quota_and_direct_model.sql  008_admin_audit_events.sql  010_coffea_sessions_summary.sql  011_user_equipment_profiles_dripper.sql  014_bean_card_bag_fields.sql  015_subscription_entitlements.sql  016_brew_records_drop_bean_snapshot.sql  017_bean_card_unify_sources.sql  018_billing_payments.sql  019_invite_gift_membership.sql  README.md
deepcoffee-api/schema/: README.md  baseline_2026_06_22.sql
deepcoffee-api/scripts/: audit_frontmatter_slugs.py  backfill_alias_locale.py  backfill_bean_entity_links.py  backfill_entity_aliases.py  create_tables.py  create_tables_supabase.py  test.sh
deepcoffee-api/tests/: conftest.py  test_ai_answer.py  test_bean_card_intake.py  test_bean_recommend.py  test_beans.py  test_billing_payments.py  test_billing_repair.py  test_brew_coach.py  test_brew_records.py  test_chat_knowledge_fixes.py  test_coffea_dispatch.py  test_coffea_executor.py  test_coffea_messages.py  test_entity_disambig.py  test_entity_i18n.py  test_entity_resolver.py  test_entity_seed.py  test_equipment.py  test_grinder_scales.py  test_health_auth.py  test_image_understanding.py  test_invite_gate.py  test_invite_gift.py  test_knowledge.py  (+10 more)
(+411 files in other folders)
