[project]
name = "deepcoffee-api"
version = "0.23.1"
description = "DeepCoffee business backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<1",
    "PyJWT[crypto]>=2.9,<3",
    "SQLAlchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "sentry-sdk[fastapi]>=2.0,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
# AI 观测（Phase 3）。可选：未安装时 langfuse_client 自动降级为 no-op，
# 不影响业务，也不进默认运行镜像。需要观测时 `pip install .[observability]`。
observability = [
    "langfuse>=2.0,<3",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
